change ex to es

--- a/es2.html
+++ b/es2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>capitali europee</title>
-    <link rel="stylesheet" href="ex2.css">
+    <link rel="stylesheet" href="es2.css">
 </head>
 <body>
     <h1>Capitali europee</h1>
@@ -24,6 +24,6 @@
         <button id="Madrid">Madrid</button>
         <button id="Budapest">Budapest</button><br><br>
     </div>
-    <script src="ex2.js"></script>
+    <script src="es2.js"></script>
 </body>
 </html>
