--- a/es2.html
+++ b/es2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>capitali europee</title>
-    <link rel="stylesheet" href="es2.css">
+    <link rel="stylesheet" href="es.css">
 </head>
 <body>
     <h1>Capitali europee</h1>
